...
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/upvote_button"
                android:layout_width="50dp"
                android:layout_height="70dp"
                android:background="@android:drawable/screen_background_light_transparent"
                android:contentDescription="@string/upvote"
                android:scaleX="0.5"
                android:scaleY="0.5"
...
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                app:srcCompat="@mipmap/upvote_empty" />

            <ImageButton
                android:id="@+id/downovte_button"
                android:layout_width="50dp"
                android:layout_height="70dp"
                android:background="@android:drawable/screen_background_light_transparent"
                android:contentDescription="@string/downvote"
                android:scaleX="0.5"
                android:scaleY="0.5"
...
